--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   ],
   "author": "Jaime Alvarez <jaime.af.git@gmail.com>",
   "license": "ISC",
+  "repository": {
+    "url": "https://github.com/Jaime-alv/mathRainbowParser"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
